# Agrosense360_FlaskServer

./: .gcloudignore  .gitignore  Dockerfile  Procfile  app.py  dockerfile  main.py  pyproject.toml  recommendations.json  requirements.txt  start.ps1  start.sh  startup.sh  test.py  wsgi.py
agrosense360/assets/: class_indices.json
agrosense360/scripts/: download-model.sh
agrosense360/src/: app.py  config.py  firebase_utils.py  image_utils.py  ml_utils.py  telegram_utils.py  translation_utils.py
agrosense360/src/views/: main.py
agrosense360/templates/: index.html
scripts/: download-model.sh  entrypoint.sh
